fixed responsiveness, improved text size and visibility for mobile

--- a/style.css
+++ b/style.css
@@ -52,10 +52,10 @@ body {
       margin-top:0;
     }
     #welcome, #hometext {
-         font-size: 5.3em;
+         font-size: 6em;
       }
       #description {
-        font-size: 2.6em;
+        font-size: 4em;
       }
         .menuoptions {
           font-size: 1.8em;
